--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Курс валют</string>
     <string name="course_on">Курс на:</string>
+    <string name="all_courses">все валюты</string>
 </resources>
