--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="course_on">Курс на:</string>
     <string name="all_courses">все валюты</string>
     <string name="text_example">TextView</string>
+    <string name="get_courses_on">получить курс на:</string>
     <string name="USD">Доллар США</string>
     <string name="EUR">Евро</string>
     <string name="RUB">Российский рубль</string>
